syntax = "proto3";

option go_package = "./;pb";

service ApiV1Services {
    rpc SayHello (HelloRequest) returns (HelloReply) {};

    //ACCOUNTS
    rpc CreateAccount (CreateAccounttRequest) returns (CreateAccountReply) {};

    rpc ActivateAccount (ActivateAccountRequest) returns (ActivateAccountResponse);

    rpc SetNewPassowrd (NewPassowrdRequest) returns (NewPassowrdResponse);

    rpc SignIn (SigninRequest) returns (SigninReply) {};

    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenReply) {};

    //PROJECTS
    rpc CreateProject (CreateProjectRequest) returns (CreateProjectReply) {};
}

message Account {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string username = 4;
    string password = 5;
}

message CreateAccounttRequest {
    Account account = 1;
    string apiKey = 2;
}

message CreateAccountReply {
    bool success = 1;
    string error = 2;
    string accountId = 3;
}

message ActivateAccountRequest {
    string apiKey = 1;
    string username = 2;
}

message ActivateAccountResponse {
    bool success = 1;
    string error = 2;
}

message NewPassowrdRequest {
    string apiKey = 1;
    string username = 2;
    string newPassword = 3;
}

message NewPassowrdResponse {
    bool success = 1;
    string error = 2;}

message SigninRequest {
    string email = 1;
    string password = 2;
    string apiKey = 3;
}

message SigninReply {
    bool success = 1;
    string error = 2;
    string token = 3;
}

message VerifyTokenRequest {
    string token = 1;
    string projectId = 2;
}

message Payload {
    string id = 1;
    string email = 2;
    int64 issueAt = 3;
    int64 expiredAt = 4; 
}

message VerifyTokenReply {
    bool success = 1;
    string error = 2;
    Payload Payload = 3;
}

message HelloRequest {
    string hello = 1;
}

message HelloReply {
    string hello = 1;
}

message Project {
    string name = 1;
    string description = 2;
    string hashAlgorithm = 3;
    uint32 roundHash = 4;
}

message CreateProjectRequest {
    Project project = 1;
}

message CreateProjectReply {
    bool success = 1;
    string error = 2;
    string apiKey = 3;
}